fix(popover): add dark mode variables (#748)

--- a/tegel/src/components/popover-canvas/popover-canvas-theme-vars.scss
+++ b/tegel/src/components/popover-canvas/popover-canvas-theme-vars.scss
@@ -1,8 +1,10 @@
-:root,
+:root,--sdds-popover-canvas-color
 .sdds-theme-light {
-  --sdds-popover-bg-default: #fff;
+  --sdds-popover-canvas-color: var(--sdds-grey-958);
+  --sdds-popover-canvas-background: var(--sdds-white);
 }
-
+:root,
 .sdds-theme-dark {
-  --sdds-popover-bg-default: #000;
+  --sdds-popover-canvas-color: var(--sdds-grey-50);
+  --sdds-popover-canvas-background: var(--sdds-grey-900);
 }
